chore: fix studio on safari

--- a/src/style.css
+++ b/src/style.css
@@ -19,7 +19,7 @@ body {
     overflow-x: hidden;
 }
 
-* {
+html {
 	scroll-behavior: smooth;
 	overscroll-behavior: none;
 }
